--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "hello-covid11",
+  "name": "hello-covid19",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.24.0",
+    "easy-peasy": "^3.3.0",
+    "framer-motion": "^1.10.2",
+    "normalize.css": "^8.0.1",
+    "qs": "^6.9.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "react-table": "^7.0.0",
+    "react-use": "^13.27.0",
+    "recharts": "^1.8.5",
+    "styled-components": "^5.0.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/qs": "^6.9.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/react-table": "^7.0.12",
+    "@types/styled-components": "^5.0.1",
+    "ts-essentials": "^6.0.2",
+    "tslint": "^6.1.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-origin-ordered-imports-rule": "^1.2.2",
+    "tslint-react": "^4.2.0",
+    "tslint-react-hooks": "^2.2.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
