--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.24.0",
     "easy-peasy": "^3.3.0",
+    "formik": "^2.1.4",
     "framer-motion": "^1.10.2",
     "normalize.css": "^8.0.1",
     "qs": "^6.9.2",
