--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-table": "^7.0.12",
+    "@types/recharts": "^1.8.9",
     "@types/styled-components": "^5.0.1",
     "ts-essentials": "^6.0.2",
     "tslint": "^6.1.0",
