--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.24.0",
+    "dotenv-flow": "^3.1.0",
     "easy-peasy": "^3.3.0",
     "formik": "^2.1.4",
     "framer-motion": "^1.10.2",
@@ -32,6 +33,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-table": "^7.0.12",
     "@types/styled-components": "^5.0.1",
+    "ftp-deploy": "^2.3.6",
     "ts-essentials": "^6.0.2",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
@@ -41,6 +43,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
+    "deploy": "yarn build && node deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
